# 50-10000

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alert_rules.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RUNBOOK.md
kucoin_bot/: __init__.py  __main__.py  config.py  models.py
kucoin_bot/api/: client.py  websocket.py
kucoin_bot/backtest/: engine.py
kucoin_bot/reporting/: cli.py  http_server.py  metrics.py  retention.py
kucoin_bot/services/: cost_model.py  execution.py  market_data.py  portfolio.py  risk_manager.py  side_selector.py  signal_engine.py  strategy_monitor.py
kucoin_bot/strategies/: base.py  hedge.py  mean_reversion.py  risk_off.py  scalping.py  trend.py  volatility_breakout.py
tests/: conftest.py  test_api_client.py  test_backtest.py  test_config.py  test_execution.py  test_integration.py  test_market_data.py  test_models.py  test_observability.py  test_optimizations.py  test_risk_manager.py  test_short_trading.py  test_signal_engine.py  test_strategies.py
