[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kucoin-bot"
version = "0.1.0"
description = "Fully automatic KuCoin API trading bot with multi-strategy support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9,<4",
    "websockets>=12.0,<14",
    "sqlalchemy>=2.0,<3",
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29,<1", "psycopg2-binary>=2.9,<3"]
redis = ["redis>=5.0,<6"]
dev = ["pytest>=8.0,<9", "pytest-asyncio>=0.23,<1", "aioresponses>=0.7,<1", "mypy>=1.8,<2"]

[project.scripts]
kucoin-bot = "kucoin_bot.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
